--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Zarqa"
         tools:targetApi="31">
         <activity
+            android:name=".data.views.auth.register.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".data.views.auth.login.LoginActivity"
             android:exported="true">
             <intent-filter>
