--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,22 @@
         android:theme="@style/Theme.Zarqa"
         tools:targetApi="31">
         <activity
-            android:name=".data.views.auth.register.RegisterActivity"
+            android:name=".views.admin.AdminActivity"
             android:exported="false" />
         <activity
-            android:name=".data.views.auth.login.LoginActivity"
+            android:name=".views.worker.WorkerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.dropshipper.DropshipperActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.auth.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.auth.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".data.views.splash.SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".data.views.main.MainActivity"
+            android:name=".views.main.MainActivity"
             android:exported="false" />
     </application>
 
