--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,19 @@
         android:theme="@style/Theme.Zarqa"
         tools:targetApi="31">
         <activity
+            android:name=".views.worker.warehouse.product.add.AddProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.admin.AdminActivity"
             android:exported="false" />
         <activity
             android:name=".views.worker.WorkerActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".views.dropshipper.DropshipperActivity"
@@ -37,7 +38,7 @@
             android:exported="false" />
         <activity
             android:name=".views.splash.SplashActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".views.main.MainActivity"
             android:exported="false" />
