--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:theme="@style/Theme.Zarqa"
         tools:targetApi="31">
         <activity
+            android:name=".views.worker.warehouse.product.restock.TakeProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.worker.warehouse.product.add.OpenCameraActivity"
             android:exported="false" />
         <activity
@@ -37,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".views.worker.WorkerActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".views.dropshipper.DropshipperActivity"
             android:exported="false" />
