--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:name=".utils.MediaManager"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -27,7 +26,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Zarqa"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".views.worker.warehouse.product.detail.DetailProductActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".views.worker.warehouse.tab.allproduct.AllProductActivity"
+            android:exported="false" />
         <activity
             android:name=".views.worker.warehouse.product.restock.TakeProductActivity"
             android:exported="false" />
@@ -54,6 +68,12 @@
             android:exported="false" />
         <activity
             android:name=".views.splash.SplashActivity"
+            android:exported="false"/>
+
+<!--    Activity Utama    -->
+<!--
+            <activity
+            android:name=".views.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -61,6 +81,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+    -->
+
         <activity
             android:name=".views.main.MainActivity"
             android:exported="false" />
